Revision history for {{$dist->name}}

{{$NEXT}}

4.102342  2010-10-14 23:28:20 America/New_York
          Improved diagnostics for various 'main_module could not be found'
          conditions. ( Kent Fredric )

          Improved diagnostics for apparently missing plugins (thanks, David
          Golden)

          add --missing to authordeps (thanks, Danijel Tasov)

4.102341  2010-09-17 19:14:41 America/New_York
          ANNOYANCES: [AutoPrereq] and [Prereq] will now complain that you
          should be using [AutoPrereqs] and [Prereqs];  the irregularly named
          plugins will be removed in Dist-Zilla v5

          add the "authordeps" command

          avoid clobbering PERL5LIB env var when building

          add "append_file" parameter to DistINI plugin

          add "except" parameter to PruneCruft

4.102340  2010-08-22 15:47:51 America/New_York
          add files to archive in name-length order (thanks, Jonathan Scott
          Duff)

          improve permissions of created files on Win32 (thanks, Curtis Jewell)

          do not clobber PERL5LIB during build (thanks, John Napiorkowski)

4.102221  2010-08-10 11:35:00 America/New_York
          use the new "mute" feature of Log::Dispatchouli to simplify listdeps
          make TextTemplate rendering errors fatal
          document the changes made in 4.102220

4.102220  2010-08-10 07:46:27 America/New_York
          pass a $dist var to TemplateModule templates

4.101900  2010-07-09 09:05:25 America/New_York
          add a "subdir" directory to UploadToCPAN

4.101880  2010-07-07 09:25:41 America/New_York
          stop being so pushy about running dzil setup (reported by AVAR)

          dzil setup will not die if ~/.dzil does not exist (reported by David
          Golden)

4.101831  2010-07-02 18:33:58 America/New_York
          correctly apply another patch from LA.pm that had been misapplied
          earlier

4.101830  2010-07-02 10:27:24 America/New_York